fixed width details on mobile

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -1026,7 +1026,7 @@ input::-webkit-inner-spin-button {
   }
 
   #trip-details-container {
-    padding-inline: 0.5rem;
+    padding-inline: 0.8rem;
     display: grid;
     gap: 0.5rem;
     grid-template-columns: repeat(4, 1fr);
